--- a/public/templates/main.html
+++ b/public/templates/main.html
@@ -7,14 +7,5 @@
         <input type="button" value="My posts"/>
     </fieldset>
 </form>
-<form>
-    <fieldset>
-        <legend>New Post</legend>
-        <input type="text" id="newPost">
-        <input type="submit" id="submitNewPost" value="Publish">
-    </fieldset>
-</form>
-<fieldset>
-    <legend>Posts</legend>
-    <div id="posts"></div>
-</fieldset>
+<div id="postsFrame"></div>
+
