social 0.1.1 - sort by "createdAt"

--- a/public/templates/post.html
+++ b/public/templates/post.html
@@ -1,4 +1,4 @@
 <fieldset>
-    <legend><%= userId%></legend>
+    <legend><%= userId%> <%= createdAt%></legend>
     <div><%= text%></div>
 </fieldset>
