social 0.1.2 - add Users, Profile

--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -17,6 +17,6 @@
 </form>
 <input type="submit" id="loginSubmit" value="Login Now">
 <ul>
-    <li><a href="#forgotpassword">Forgot Password?</a></li>
+ <!--   <li><a href="#forgotpassword">Forgot Password?</a></li>-->
     <li><a href="#register">Sign Up</a></li>
 </ul>
