--- a/public/templates/main.html
+++ b/public/templates/main.html
@@ -1,11 +1,9 @@
 <p><strong><%= name%></strong> <a href="" id="logout">LogOut</a></p>
-<form>
+<form id="mainFrame">
     <fieldset>
         <legend>Menu</legend>
-        <input type="button" value="Posts"/>
-        <input type="button" value="Friends"/>
-        <input type="button" value="My posts"/>
+        <input type="button" id="btnMainPosts" value="Posts"/>
+        <input type="button" id="btnMainFriends" value="Users"/>
+        <input type="button" id="btnMainProfile" value="My profile"/>
     </fieldset>
 </form>
-<div id="postsFrame"></div>
-
