--- a/public/templates/post.html
+++ b/public/templates/post.html
@@ -1,4 +1,4 @@
-<fieldset>
-    <legend><%= userId%> <%= createdAt%></legend>
+<fieldset class="post">
+    <legend style="font-size: 80%"><%= username%> - <%= createdAt%></legend>
     <div><%= text%></div>
 </fieldset>
