social 0.1.3 - html was fixed

--- a/public/templates/main.html
+++ b/public/templates/main.html
@@ -1,4 +1,4 @@
-<p><strong><%= name%></strong> <a href="" id="logout">LogOut</a></p>
+<p align="right"><strong><%= name%></strong> <a href="" id="logout">LogOut</a></p>
 <form id="mainFrame">
     <fieldset>
         <legend>Menu</legend>
