--- a/public/templates/profile.html
+++ b/public/templates/profile.html
@@ -1,4 +1,7 @@
-<div>
-    <div>Name: <strong><%= name%></strong></div>
-    <div>Email: <strong><%= email%></strong></div>
-</div>
+<fieldset>
+    <legend>My Profile</legend>
+    <div>
+        <div>Name: <strong><%= name%></strong></div>
+        <div>Email: <strong><%= email%></strong></div>
+    </div>
+</fieldset>
