social 0.2.0 - main menu view has separated

--- a/public/templates/main.html
+++ b/public/templates/main.html
@@ -1,5 +1,5 @@
 <p align="right"><strong><%= name%></strong> <a href="" id="logout">LogOut</a></p>
-<form id="mainFrame">
+<form >
     <fieldset>
         <legend>Menu</legend>
         <input type="button" id="btnMainPosts" value="Posts"/>
@@ -7,3 +7,4 @@
         <input type="button" id="btnMainProfile" value="My profile"/>
     </fieldset>
 </form>
+<div id="mainFrame"></div>
