social 0.2.1 - geolocation was added

--- a/public/templates/profile.html
+++ b/public/templates/profile.html
@@ -3,5 +3,7 @@
     <div>
         <div>Name: <strong><%= name%></strong></div>
         <div>Email: <strong><%= email%></strong></div>
+        <button id="location">Show my location</button>
+        <div id="outLocation"></div>
     </div>
 </fieldset>
