social 0.2.2 - id name was fixed

--- a/public/templates/main.html
+++ b/public/templates/main.html
@@ -1,10 +1,12 @@
+<div class="mainMenu" id="mainMenu">
 <p align="right"><strong><%= name%></strong> <a href="" id="logout">LogOut</a></p>
 <form >
     <fieldset>
         <legend>Menu</legend>
         <input type="button" id="btnMainPosts" value="Posts"/>
-        <input type="button" id="btnMainFriends" value="Users"/>
+        <input type="button" id="btnMainUsers" value="Users"/>
         <input type="button" id="btnMainProfile" value="My profile"/>
     </fieldset>
 </form>
+</div>
 <div id="mainFrame"></div>
