--- a/public/templates/postsFrame.html
+++ b/public/templates/postsFrame.html
@@ -2,10 +2,11 @@
     <fieldset>
         <legend>New Post</legend>
         <input type="text" id="newPost">
+<!--        <textarea name="comment" cols="40" rows="1" id="newPost"></textarea>-->
         <input type="submit" id="submitNewPost" value="Publish">
     </fieldset>
 </form>
 <fieldset>
     <legend>Posts</legend>
-    <div id="posts"></div>
+    <div class="posts" id="posts"></div>
 </fieldset>
