--- a/public/templates/profile.html
+++ b/public/templates/profile.html
@@ -1,9 +1,27 @@
 <fieldset>
     <legend>My Profile</legend>
     <div>
-        <div>Name: <strong><%= name%></strong></div>
-        <div>Email: <strong><%= email%></strong></div>
-        <button id="location">Show my location</button>
-        <div id="outLocation"></div>
+        <div><img src="<%= avatar%>" width="100" height="100"  align="left" alt="avatar"></div>
+        <div>
+            <table>
+                <tr>
+                    <td>Name:</td>
+                    <td><%= name%></td>
+                </tr>
+                <tr>
+                    <td>Email:</td>
+                    <td><%= email%></td>
+                </tr>
+                <tr>
+                    <td>Location:</td>
+                    <td><%= location[0]%></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td><%= location[1]%></td>
+                </tr>
+            </table>
+        </div>
     </div>
 </fieldset>
+<button id="btnEditProfile">Edit Profile</button>
