--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -4,13 +4,13 @@
         <fieldset>
             <legend>Email</legend>
             <label>
-                <input type="text" name="email" id="email">
+                <input type="text" placeholder="name@email.com" id="email">
             </label>
         </fieldset>
         <fieldset>
             <legend>Password</legend>
             <label>
-                <input type="password" name="password" id="password">
+                <input type="password" placeholder="password" id="password">
             </label>
         </fieldset>
         <table>
