--- a/public/templates/user.html
+++ b/public/templates/user.html
@@ -11,11 +11,15 @@
                     <td>Email:</td>
                     <td><%= email%></td>
                 </tr>
-                <tr id="profileLocation">
-                    <td>Location:</td>
-                    <td><%= location[0]%></td>
-                    <td><%= location[1]%></td>
+                <tr id="profileBirthday">
+                    <td>Birthday:</td>
+                    <td><%= birthday%></td>
                 </tr>
+                <!--<tr id="profileLocation">-->
+                    <!--<td>Location:</td>-->
+                    <!--<td><%= location[0]%></td>-->
+                    <!--<td><%= location[1]%></td>-->
+                <!--</tr>-->
             </table>
         </div>
 
