--- a/public/templates/profile.html
+++ b/public/templates/profile.html
@@ -9,6 +9,10 @@
                     <td><%= name%></td>
                 </tr>
                 <tr>
+                    <td>Birthday:</td>
+                    <td><%= birthday%></td>
+                </tr>
+                <tr>
                     <td>Email:</td>
                     <td><%= email%></td>
                 </tr>
