social 0.2.7 - add friend template was added

--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -13,12 +13,10 @@
                 <input type="password" placeholder="password" id="password">
             </label>
         </fieldset>
-        <table>
-            <tr>
-            <td width="98%"><input type="submit" id="loginSubmit" value="Login Now"></td>
-           <!-- <td><a href="#forgotpassword">Forgot Password?</a></td>-->
-            <td><a href="#register">Sign_Up</a></td>
-            </tr>
-        </table>
+        <div>
+            <input type="submit" id="loginSubmit" value="Login Now">
+            <!-- <td><a href="#forgotpassword">Forgot Password?</a></td>-->
+            <span style="float: right"><a href="#register">Sign_Up</a></span>
+        </div>
     </fieldset>
 </form>
