--- a/public/templates/register.html
+++ b/public/templates/register.html
@@ -38,11 +38,9 @@
                 <input type="password" placeholder="password" id="password"/><span style="color: red"> *</span>
             </label>
         </fieldset>
-        <table>
-            <tr>
-                <td width="98%"> <input type="submit" id="registerSubmit" value="Register Now"/></td>
-                <td><a href="#login">Login</a></td>
-            </tr>
-        </table>
+        <div>
+            <input type="submit" id="registerSubmit" value="Register Now"/>
+            <span style="float: right"><a href="#login">Login</a></span>
+        </div>
     </fieldset>
 </form>
