--- a/public/templates/user.html
+++ b/public/templates/user.html
@@ -15,12 +15,8 @@
                     <td>Birthday:</td>
                     <td><%= birthday%></td>
                 </tr>
-                <!--<tr id="profileLocation">-->
-                    <!--<td>Location:</td>-->
-                    <!--<td><%= location[0]%></td>-->
-                    <!--<td><%= location[1]%></td>-->
-                <!--</tr>-->
             </table>
+            <button id="addFriend" name="<%= _id%>">Add friend</button>
+            <button id="removeFriend" name="<%= _id%>">Remove friend</button>
         </div>
-
 </fieldset>
