social 0.2.8 - register in firefox was fixed, add references to email

--- a/public/templates/user.html
+++ b/public/templates/user.html
@@ -9,7 +9,7 @@
                 </tr>
                 <tr id="profileEmail">
                     <td>Email:</td>
-                    <td><%= email%></td>
+                    <td><a href="mailto:<%= email%>"><%= email%></a></td>
                 </tr>
                 <tr id="profileBirthday">
                     <td>Birthday:</td>
