social 0.2.9 - index.html was edited. main menu view and other view was cut.

--- a/public/templates/main.html
+++ b/public/templates/main.html
@@ -1,7 +1,7 @@
 <div class="mainMenu" id="mainMenu">
 <form >
     <fieldset>
-        <legend>Menu</legend>
+        <legend><h3>Vrakashy</h3></legend>
         <input type="text" id="inputMainFindFriends" placeholder="Find friends"/>
         <input type="button" id="btnMainUsers" value="Find friends"/>
         <input type="button" id="btnMainPosts" value="Posts"/>
@@ -11,4 +11,3 @@
     </fieldset>
 </form>
 </div>
-<div id="mainFrame"></div>
